Responsiveness completed for the drop down menu in the navigation. Added some svgs for style. Fixed banner underline effect and did some changes to the css to attain my desired positioning of the text. Changed my sub title font, wasn't really matching the other fonts. Added scaling font to the projects description links, on smaller screens it was extending over the screen. Added underline effect to the description titles in the projects section.

--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -26,40 +26,53 @@
 #personal_info {
   color: white;
   font-family: $title-font;
+  display: flex;
+  flex-flow: column nowrap;
+  width: 25%;
+
+  h1 {
+    font-weight: $regular;
+    font-size: $banner-role-font-size;
+    margin: 1rem;
+    flex-shrink: 0;
+    flex-grow: 0;
 
 
-
-  #name_and_role {
-
-    #name {
-
-      font-size: $banner-font-size;
-      font-weight: $regular;
-
-
-
-      // &::after {
-      //   content: "";
-      //   display: block;
-      //   margin: 0 auto;
-      //   width: 70%;
-      //   border-bottom: 4px solid $red-pink;
-      // }
+    &::after {
+      content: "";
+      display: block;
+      margin: 0 auto;
+      width: 70%;
+      border-bottom: 4px solid $red-pink;
     }
 
-    #role {
-      font-weight: $regular;
-      font-size: $banner-role-font-size;
-      padding-left: 3rem;
 
-
-      // &::after {
-      //   content: "";
-      //   display: block;
-      //   margin: 0 auto;
-      //   width: 70%;
-      //   border-bottom: 4px solid $red-pink;
-      // }
-    }
   }
+
+  #name {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+
+
+
+  }
+
+  #role {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+  }
+
+
+}
+
+@media (max-width: 610px) {
+
+  #personal_info #name,
+  #personal_info #role {
+
+    justify-content: center;
+  }
+
 }
