--- a/src/components/projects/panels/media_panel.scss
+++ b/src/components/projects/panels/media_panel.scss
@@ -3,7 +3,7 @@
 
 .project_name {
   text-align: left;
-  padding-left: 3rem;
+  padding-left: 1.5rem;
   font-family: $sub-title-font;
   font-weight: $regular;
   font-size: clamp(32px, 2vw, 38px);
