--- a/src/util/_varibales.scss
+++ b/src/util/_varibales.scss
@@ -10,8 +10,8 @@ $dark-black: #161616;
 // Font Family
 $title-font: "Staatliches",
 sans-serif;
-$sub-title-font: "Red Rose",
-cursive;
+$sub-title-font: 'Oxygen',
+sans-serif;
 $description-font: "Roboto",
 sans-serif;
 
@@ -26,3 +26,4 @@ $banner-font-size: clamp(28px, 3.2vw, 64px);
 $banner-role-font-size: clamp(24px, 2.8vw, 52px);
 $skills-font-size: clamp(42px, 2.8vw, 54px);
 $header-font-size: clamp(42px, 3.2vw, 64px);
+$desc-links-font-size:clamp(16px, 1vw, 24px);
